feat: add frontend and server communication